--- a/muLa_frontend/package.json
+++ b/muLa_frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
+    "config": "^3.3.7",
     "ejs": "^3.1.6",
     "fontsource-roboto": "^4.0.0",
     "moment": "^2.29.1",
