--- a/muLa_backend/.env
+++ b/muLa_backend/.env
@@ -5,3 +5,5 @@ RESET_PASSWORD_KEY = accountpasswordreset00000
 
 CLIENT_URL=http://localhost:3000
 SERVER_URL=http://localhost:1000
+
+JWT_KEY = ijasdfarf9raueit0924ujr2WFDAW#$Rq43t43t4tafWFA$ET
