--- a/muLa_backend/package.json
+++ b/muLa_backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.2.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.2",
