--- a/muLa_backend/package.json
+++ b/muLa_backend/package.json
@@ -15,9 +15,12 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.28.1",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "crypto-random-string": "^4.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -34,10 +37,11 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
-    "multer": "^1.4.3",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
+    "randomatic": "^3.1.1",
     "sharp": "^0.29.3",
     "socket.io": "^4.0.0",
     "uuidv4": "^6.2.12"
