--- a/api/package.json
+++ b/api/package.json
@@ -28,12 +28,13 @@
     "express-fileupload": "^1.2.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.2",
+    "form-data": "^4.0.0",
     "geojson": "^0.5.0",
     "geolib": "^3.3.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^6.0.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
