multiple frontend changes and validation

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-dbKEY=mongodb+srv://dbAdmin:tb75ksp63c@cluster0.e477k.mongodb.net/dbAdmin?retryWrites=true&w=majority
+dbKEY=mongodb+srv://dbAdmin:tb75ksp63c@cluster0.e477k.mongodb.net/muLa_db?retryWrites=true&w=majority
 
 JWT_KEY=ijasdfarf9raueit0924ujr2WFDAW#$Rq43t43t4tafWFA$ET
 
