--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.0",
@@ -19,35 +17,24 @@
     "bootstrap-icons": "^1.5.0",
     "config": "^3.3.7",
     "ejs": "^3.1.6",
-    "fontsource-roboto": "^4.0.0",
     "moment": "^2.29.1",
     "mongo-image-converter": "^1.0.2",
-    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
-    "react-simplert": "0.0.2",
-    "reactstrap": "^8.9.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
-    "shave": "^2.5.10",
     "socket.io-client": "^4.2.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.1.7",
-    "sweetalert2-react-content": "^4.1.1",
+    "sweetalert2": "^11.4.23",
     "thunk": "0.0.1",
     "timeago.js": "^4.0.2",
-    "use-position": "0.0.8",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "use-position": "0.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
