fixing api after master merge & develop branch fix

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,15 @@
+dbKEY=mongodb+srv://dbAdmin:tb75ksp63c@cluster0.e477k.mongodb.net/muLa_db?retryWrites=true&w=majority
+
+JWT_KEY=ijasdfarf9raueit0924ujr2WFDAW#$Rq43t43t4tafWFA$ET
+
+MAILGUN_USER=thelittleteaclipper.com
+MAILGUN_PASS=b9d14f6bd33bef3cdc53f627be79cf3d-5e7fba0f-af14eb29
+
+RESET_PASSWORD_KEY=accountpasswordreset00000
+
 CLIENT_URL=http://localhost:3000
 SERVER_URL=http://localhost:1000
+
+CLOUDINARY_CLOUD_NAME=mula-images
+CLOUDINARY_API_KEY=944279253834115
+CLOUDINARY_API_SECRET=x47NMEpUV-w4qFMKNEDUAcH34Gs
