--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,38 @@
 {
-  "name": "mern_dating_app_frontend",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.3.0",
-    "@mui/material": "^5.3.0",
-    "@reduxjs/toolkit": "^1.7.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.3",
+    "@mui/styled-engine-sc": "^5.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
+    "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
-    "bootstrap-icons": "^1.5.0",
     "config": "^3.3.7",
-    "ejs": "^3.1.6",
-    "moment": "^2.29.1",
-    "mongo-image-converter": "^1.0.2",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.10.1",
-    "react-icons": "^4.2.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "redux": "^4.1.0",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.2.0",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.4.23",
-    "thunk": "0.0.1",
-    "timeago.js": "^4.0.2",
-    "use-position": "0.0.8"
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.26",
+    "thunk": "^0.0.1",
+    "use-position": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
