--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
-    "@mui/styled-engine-sc": "^5.9.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "config": "^3.3.7",
+    "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -30,9 +28,9 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.26",
     "thunk": "^0.0.1",
-    "use-position": "^1.0.0"
+    "use-position": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
