--- a/api/User/package.json
+++ b/api/User/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "api",
+  "name": "user",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "nodemon server.js",
+    "user": "nodemon server.js",
     "client": "cd .. && cd client && npm start",
     "dev": "concurrently \"npm run api\" \"npm run client\""
   },
