--- a/api/User/package.json
+++ b/api/User/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "user": "nodemon server.js",
+    "user": "nodemon src/server.js",
     "client": "cd .. && cd client && npm start",
     "dev": "concurrently \"npm run api\" \"npm run client\""
   },
