--- a/api/Auth/package.json
+++ b/api/Auth/package.json
@@ -32,6 +32,7 @@
     "geojson": "^0.5.0",
     "geolib": "^3.3.1",
     "gridfs-stream": "^1.1.1",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgun.js": "^6.0.1",
