--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@sweetalert/with-react": "^0.1.1",
